Add responive css

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
     <title>Christoph Gutsche | Designer</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <meta name="viewport" content="widht=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
@@ -21,12 +23,12 @@
       </nav>
     </header>
     <div id="wrapper">
-      <section>
+      <section id="primary">
         <h3>General Infos</h3>
         <p> I am currently looking for new work. Contact my</P>
         <p> Please use E-Mail</p>
       </section>
-      <section>
+      <section id="secondary">
         <h3> Contact details</h3>
         <ul class="contact-info">
           <li class="phone"><a href="tel:123456788">123456788</al></li>
