--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Christoph Gutsche | Designer</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <meta name="viewport" content="widht=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
